# awencode

./: .dockerignore  .gitignore  CHANGELOG.md  NOTICE  README.md  SECURITY.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: design-system.mdc  mono-fonts.mdc
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: ci.yml  desktop-release.yml  rust-ci.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/scripts/: prepare-codex-app-server.mjs
apps/desktop/src/: App.tsx  global.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_env.rs  codex_bridge.rs  github.rs  lib.rs  linear.rs  main.rs  openai.rs  secrets.rs
apps/desktop/src/hooks/: useAgent.ts  useCodexNotifications.ts  useLinearIssueStatusSync.ts  useProjectGitBridge.ts  useProjectWorkspaceBridge.ts  useRpc.ts  useThreads.ts
apps/desktop/src/lib/: agent-metrics.ts  codex-turn.ts  cursor-midnight-theme.ts  dnd.ts  git.ts  linear-thread-tools.ts  linear.ts  mcp-registry.ts  (+11 more)
awencode_icons.icon/: icon.json
codex-rs/: Cargo.toml
codex-rs/arg0/src/: lib.rs  path_env.rs
codex-rs/codex-api/src/: provider.rs
codex-rs/core/src/: api_bridge.rs  client.rs  client_tests.rs  error.rs  model_provider_info.rs  model_provider_info_tests.rs
codex-rs/rmcp-client/src/: perform_oauth_login.rs
docs/: contributing.md  getting-started.md  install.md
ideation/: claude_conversation.txt  orchestrator-prototype.jsx
ideation/fonts/: valthos_css.css
(+38 files in other folders)
